k8s/microservices/follow-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: follow-service
  labels:
    app: follow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: follow-service
  template:
    metadata:
      labels:
        app: follow-service
    spec:
      containers:
      - name: follow-service
        image: localhost:5000/follow-service:v0.1.5
        ports:
        - containerPort: 5003
