k8s/microservices/follow-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: follow-service
spec:
  selector:
    app: follow-service
  ports:
    - protocol: TCP
      port: 5003
