k8s/microservices/follow-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: follow-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /follow-service
        pathType: Prefix
        backend:
          service:
            name: follow-service
            port:
              number: 80
